Slight change to the navBar profile pic, filex its aspect ratio and prevent stretching

--- a/client/src/components/NavBarComps.module.css
+++ b/client/src/components/NavBarComps.module.css
@@ -11,6 +11,7 @@ margin-right: 10px;
 }
 
 .profile{
+object-fit: cover;
 width: 55px;
 height: 55px; 
 border-radius: 50%;
